--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				</div>
 				<div class="col white result text-align">
 					<h1>
-						Lorem ipsum dolor sit 
+						Lorem ipsum dolor sit changes by KV
 					</h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
